cmake_minimum_required(VERSION 3.10)
project(FrameStream VERSION 1.0 LANGUAGES CXX)
#add_subdirectory(BinaryDelivery)
add_subdirectory(BlankRecordDelivery)
#add_subdirectory(C++Std)
add_subdirectory(ChainDelivery)
##add_subdirectory(Cleo)
add_subdirectory(CleoDB)
add_subdirectory(CommandPattern)
add_subdirectory(DAException)
add_subdirectory(DataDelivery)
add_subdirectory(DataHandler)
add_subdirectory(DataStorage)
add_subdirectory(DBEventHeaderProd)
add_subdirectory(DBRunHeaderProd)
add_subdirectory(DummyHistogram)
add_subdirectory(DynamicLoader)
add_subdirectory(Experiment)
add_subdirectory(FrameAccess)
add_subdirectory(HeteroContainer)
add_subdirectory(HistogramInterface)
add_subdirectory(InteractiveDelivery)
add_subdirectory(Interpreter)
add_subdirectory(JobControl)
#add_subdirectory(PackedDataStreamsDelivery)
#add_subdirectory(PackedDataStreamsFormat)
#add_subdirectory(PackedDataStreamsStorage)
add_subdirectory(Processor)
add_subdirectory(ProxyBind)
add_subdirectory(RunEventNumberProc)
add_subdirectory(Signal)
add_subdirectory(SignalsSlots)
#add_subdirectory(Skeletons)
#add_subdirectory(STLUtility)
add_subdirectory(StorageManagement)
add_subdirectory(Suez)
add_subdirectory(ToolBox)
add_subdirectory(Utility)

include(FindTCL)
